# Specker-Game

./: CMakeLists.txt  Game.cpp  Game.h  GreedyPlayer.cpp  GreedyPlayer.h  Move_State.cpp  Move_State.h  Player.cpp  Player.h  README.md  RighteousPlayer.cpp  RighteousPlayer.h  SneakyPlayer.cpp  SneakyPlayer.h  SpartanPlayer.cpp  SpartanPlayer.h  main.cpp
